# yangyang_2d_avm

./: main  main.cpp
10.roi/: Makefile  main  main.cpp
10.roi/1.固定roi/: main  main.cpp
10.roi/2.框选/: main  main.cpp
11.draw_black/: main  main.cpp
12.球面模型投影校正/: main  main.cpp
12.球面模型投影校正/Auto_FisheyeCorrect/: Auto_FisheyeCorrect.sln  read me.txt
13.2d_avm/: ╙у╤█═╝╧ё╡─╨г╒¤╙ы╓∙├ц╚л╛░╞┤╜╙╖╜╖и_═ї╥└╫└.caj  全景视图泊车辅助系统中的多视点视频拼接.caj
13.2d_avm/2.环视拼接git/: py版本地址.txt
13.2d_avm/3.角点检测/: main  main.cpp
2.lens/: len.py
2.lens/fisheye_distortion-master/: FisheyeDistortionCorrection.cpp  FisheyeDistortionCorrection.h  fisheye_distortion.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
3.h/: main  main.cpp
4.经纬/: findCircleParameter.cpp  findCircleParameter.h  globalInclude.h  tools.h  viewer.h
5.test/: VID.xml  default.xml  main  out_camera_data.xml
5.test/u_bak/: 1.cpp  main.cpp
6.cali/2/: calibdata.txt  main  main.cpp
6.cali/camera-calibration/: Readme.gitignore  calibration.cpp  calibration.h  main  main.cpp  undistort.cpp  undistort.h
7.360度全景图片的平面映射（鱼眼矫正）-新/transform_opencv24_vs2010/: transform_opencv24.sln
7.pinjie/1.4个不同方向的相机，将其鸟瞰变化后，进行拼接，得到车辆及周围区域的鸟瞰视角图/: 博客地址
7.pinjie/3.pinjie/: www.dssz.com_成功的harris算法.rar
7.pinjie/4.ipm_new/: main  main.cpp
8.ipm/cv-birdview-master/: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
8.ipm/cv-birdview-master/res/: config.ini.example
8.ipm/cv-birdview-master/src/: birdview.cpp  birdview.hpp  configuration.cpp  configuration.hpp  main.cpp
9.resize/: main  main.cpp  地址
bak/: main.cpp
(+146 files in other folders)
